Add base colors

--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -1,4 +1,9 @@
 // Colors
+$accent-clr: #1dbf73;
+$dark-clr: #404145;
+$dark-clr-1: #62646a;
+$light-clr: #ffffff;
+
 $clr1: #2e3bce;
 $clr2: #6d08da;
 $clr3: #574f7d;
