--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -18,16 +18,30 @@ body {
     margin: 0;
     max-width: 1024px;
     margin: auto;
+    accent-color: $accent-clr;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: caveat;
     margin: 0 0 0.6em;
     line-height: 1;
 }
 
 
-section, main, footer {
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+section,
+main,
+footer {
     padding: 5px;
 }
 
@@ -42,7 +56,7 @@ p {
 a {
     text-decoration: none;
 }
+
 a:hover {
     text-decoration: underline;
 }
-
