--- a/src/assets/styles/cmps/Modal.scss
+++ b/src/assets/styles/cmps/Modal.scss
@@ -6,7 +6,7 @@
     right: 0;
     bottom: 0;
     position: fixed;
-    background: #686868ad;
+    background-color: rgba(0, 0, 0, .65);
 
     .modal-content {
         position: absolute;
@@ -14,7 +14,7 @@
         left: 50%;
         transform: translate(-50%, -50%);
         line-height: 1.4;
-        background: #f1f1f1;
+        background: $light-clr;
         padding: 14px 28px;
         border-radius: 3px;
         max-width: 600px;
