Style header link-container

--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -10,7 +10,7 @@
 }
 
 html {
-    font-family: montserrat;
+    font-family: Macan, "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: $dark-clr;
 }
 
@@ -25,7 +25,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: caveat;
+    font-family: Macan, "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin: 0;
     line-height: 1;
 }
@@ -56,6 +56,8 @@ a {
     cursor: pointer;
 }
 
-a:hover {
-    // text-decoration: underline;
+a:hover {}
+
+a:visited {
+    color: $dark-clr;
 }
