--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -2,6 +2,7 @@
 $accent-clr: #1dbf73;
 $dark-clr: #404145;
 $dark-clr-1: #62646a;
+$dark-clr-2: lighten(#62646a, 50%);
 $light-clr: #ffffff;
 
 $clr1: #2e3bce;
