--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -1,8 +1,10 @@
-@font-face {
-    // font-family: caveat;
-    // src: url(../../fonts/Caveat/Caveat-Regular.ttf);
-}
-@font-face {
-    // font-family: montserrat;
-    // src: url(../../fonts/Montserrat/Montserrat-Regular.ttf);
-}
+// @font-face {
+//     font-family: Macan;
+//     src: url('../../fonts/Roboto-Medium.ttf') format('truetype');
+// }
+
+
+// @font-face {
+//     font-family: 'Macan-bold';
+//     src: url('../../fonts/Macan-Bold.otf') format('otf'),
+// }
