--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -12,6 +12,7 @@
             font-weight: 1000;
             font-size: 48px;
             letter-spacing: -5px;
+            cursor: pointer;
 
             .dot {
                 color: $accent-clr;
