styling gig-index

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -24,6 +24,7 @@
 @import "cmps/AppHeader";
 @import "cmps/AppFooter";
 @import "cmps/UserMsg";
+@import "cmps/GigList.scss";
 @import "cmps/ShoppingCart";
 
 
