A basic version of a dynamic component

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -25,4 +25,5 @@
 @import "cmps/AppFooter";
 @import "cmps/UserMsg";
 @import "cmps/ShoppingCart";
+@import "cmps/DynamicBtn.scss";
 @import "cmps/Modal";
