--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -2,7 +2,24 @@
     // font-family: caveat;
     // src: url(../../fonts/Caveat/Caveat-Regular.ttf);
 }
+
 @font-face {
     // font-family: montserrat;
     // src: url(../../fonts/Montserrat/Montserrat-Regular.ttf);
+}
+
+// FONT AWESOME
+@font-face {
+    font-family: fa-brands;
+    src: url(../../fonts/fa-brands-400.ttf);
+}
+
+@font-face {
+    font-family: fa-regular;
+    src: url(../../fonts/fa-regular-400.ttf);
+}
+
+@font-face {
+    font-family: fa-solid;
+    src: url(../../fonts/fa-solid-900.ttf);
 }
