--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -2,7 +2,10 @@
 $accent-clr: #1dbf73;
 $dark-clr: #404145;
 $dark-clr-1: #62646a;
+$dark-clr-2: #e4e5e7;
+$light-clr1: #f5f5f5;
 $light-clr: #ffffff;
+
 
 $clr1: #2e3bce;
 $clr2: #6d08da;
