--- a/src/assets/styles/cmps/GigList.scss
+++ b/src/assets/styles/cmps/GigList.scss
@@ -2,43 +2,47 @@
     display: grid;
     grid-template-columns: repeat(4, 282px);
     grid-template-rows: 1fr; 
-    gap: em(34px) 
+    gap: em(34px) ;
+    .gig-preview{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-start; 
+        div .gig-img{
+            border: 1px solid #e4e5e7;
+            border-radius: 8px;
+            height: 11em;
+            width: 292px;
+     }
+    }
+    .owner-fullname{
+        font-size: 14px; 
+        font-weight:700;
+        line-height: 21px;
+    }
+    .owner-gig-title{
+        margin-top: 23px;
+        color:#404145;
+        display:-webkit-box;
+        line-height:20.8px;
+        margin-bottom: 8px;
+    }
+    .rating-price{
+        line-height: 13px;
+        gap: 3px;
+        align-items: center;
+        // margin-bottom: 8px;
+    }
+    .gig-price{
+        font-weight:700;
+        line-height:24px;
+        margin-top: 8px;
+    }
 }
 
-.gig-preview{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start; 
-    // min-height: 23.125rem;
-    // min-width: 15.3125rem;  
-}
 
-.gig-img{
-       /* background-color: #fff; */
-       border: 1px solid #e4e5e7;
-       border-radius: 8px;
-       height: 9.7em;
-       width: 292px;
-}
-.owner-fullname{
-font-size: 14px; 
-font-weight:700;
-line-height: 21px;
-}
-.owner-gig-title{
-    margin-top: 23px;
-    color:#404145;
-    display:-webkit-box;
-    line-height:20.8px;
-}
-.rating-price{
-    line-height: 13px;
-    gap: 3px;
-    align-items: center;
-}
-.gig-price{
-    font-weight:700;
-    line-height:24px;
-    margin-top: 8px;
-}
+
+
+
+
+
