--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -25,5 +25,6 @@
 @import "cmps/AppFooter";
 @import "cmps/UserMsg";
 @import "cmps/GigList.scss";
+@import "cmps/GigListWrapper..scss";
 @import "cmps/ShoppingCart";
 @import "cmps/Modal";
