reset some styles

--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -4,10 +4,10 @@
     margin: 0;
 }
 
-::selection {
-    background-color: $clr1;
-    color: $clr6;
-}
+// ::selection {
+//     background-color: $clr1;
+//     color: $clr6;
+// }
 
 html {
     font-family: Macan, "Helvetica Neue", Helvetica, Arial, sans-serif;
