--- a/src/assets/styles/basics/_forms.scss
+++ b/src/assets/styles/basics/_forms.scss
@@ -3,7 +3,7 @@ button {
     background-color: $dark-clr;
     color: $light-clr;
     padding: 5px 10px;
-    margin: 5px;
+    margin: 0;
     cursor: pointer;
 }
 
