--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -10,12 +10,34 @@
 
         .logo {
             font-weight: 1000;
-            font-size: 48px;
+            font-size: em(40px);
             letter-spacing: -5px;
             cursor: pointer;
 
             .dot {
                 color: $accent-clr;
+            }
+        }
+
+        .searchbar-container {
+            display: flex;
+            width: 100%;
+            height: em(42px);
+            margin-inline: em(32px);
+
+            .search-bar {
+                font-size: 1rem;
+                width: min(100%, em(550px));
+                height: 100%;
+                padding: 10px 2px 10px 16px;
+                border: 1px solid $dark-clr-2;
+                outline: 0;
+            }
+
+            .btn {
+                margin: 0px;
+                height: 100%;
+                width: em(49px);
             }
         }
 
