Finish header-styling

--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -24,3 +24,15 @@
     font-family: fa-solid;
     src: url(../../fonts/fa-solid-900.ttf);
 }
+
+@font-face {
+    font-family: Macan;
+    src: url(../../fonts/Macan-Medium.otf);
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: Roboto;
+    src: url(../../fonts/Roboto-Medium.ttf);
+}
