--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -1,5 +1,6 @@
 // Colors
 $accent-clr: #1dbf73;
+$dark-clr1: #222325;
 $dark-clr: #404145;
 $dark-clr-1: #62646a;
 $dark-clr-2: lighten(#62646a, 50%);
