--- a/src/assets/styles/cmps/GigList.scss
+++ b/src/assets/styles/cmps/GigList.scss
@@ -2,42 +2,81 @@
     display: grid;
     grid-template-columns: repeat(4, 282px);
     grid-template-rows: 1fr; 
-    gap: em(34px) ;
+    gap: em(34px);
     .gig-preview{
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
         align-items: flex-start; 
+     &:hover{
+       .owner-gig-title {
+            text-decoration: underline;
+          }
+     }   
         div .gig-img{
             border: 1px solid #e4e5e7;
             border-radius: 8px;
             height: 11em;
             width: 292px;
+            margin-bottom: 7px;
+            cursor: pointer;
      }
+    //  div .gig-img:hover{
+    //     .rating-price .owner-gig-title{
+    //         text-decoration: underline;
+    //     }
+    // }
     }
-    .owner-fullname{
-        font-size: 14px; 
-        font-weight:700;
-        line-height: 21px;
+    .star{
+        width: 1em;
     }
+    .owner-details{
+        flex-direction: column;
+    
+        .owner-details-1{
+            gap: 8px;
+            margin-bottom: -4px;
+        } 
+        .owner-profile-img{
+                border-radius: 50%;
+                width: 24px;
+        }
+        .owner-fullname{
+                font-size: 14px; 
+                font-weight:700;
+                line-height: 21px;
+        }
+    }
+  
     .owner-gig-title{
         margin-top: 23px;
-        color:#404145;
-        display:-webkit-box;
-        line-height:20.8px;
+        color: #404145;
+        display: -webkit-box;
+        line-height: 20.8px;
         margin-bottom: 8px;
+        font-weight: 400;
+        min-height: 2em;
+        font-size: 16px;
+        &:hover{
+            text-decoration: underline;
+        }
     }
+
     .rating-price{
         line-height: 13px;
         gap: 3px;
-        align-items: center;
-        // margin-bottom: 8px;
+        align-items: center; 
     }
-    .gig-price{
-        font-weight:700;
-        line-height:24px;
+    
+    .rate-wrapper{
+        gap: 3px
+    }
+
+    .gig-price {
+        font-weight: 700;
+        line-height: 24px;
         margin-top: 8px;
     }
+
 }
 
 
