Added dynamic model for filter buttons

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -28,4 +28,5 @@
 @import "cmps/GigListWrapper..scss";
 @import "cmps/ShoppingCart";
 @import "cmps/DynamicBtn.scss";
+@import "cmps/DynamicModal.scss";
 @import "cmps/Modal";
