--- a/src/assets/styles/cmps/DynamicBtn.scss
+++ b/src/assets/styles/cmps/DynamicBtn.scss
@@ -1,26 +1,33 @@
 .filter-btn {
+    position: relative;
     font-size: 16px;
+    font-weight: 600;
     line-height: 24px;
     text-align: start;
-    font-weight: 600;
+    
     min-width: 50px;
     min-height: 48px;
+    padding: 12px 16px;
+    border: 1px solid $light-clr2;
+    border-radius: 8px;
+    
     color: $dark-clr;
     background-color: $light-clr;
-    padding: 12px 16px;
-    border: 1px solid $dark-clr-2;
-    border-radius: 8px;
-    transition: .12s;
+    transition:0.14s;
 
-    &:focus{
+    &:focus {
         background-color: $light-clr1;
     }
 
+    .btns {
+        position: relative;
+    }
+    
     .icon {
         &.fa-solid.angle-down::before {
             font-family: fa-solid;
         }
-    
+        
         &.fa-solid.angle-down::after {
             content: " \f107";
         }
@@ -28,11 +35,22 @@
         &.fa-solid.angle-up::before {
             font-family: fa-solid;
         }
-    
+
         &.fa-solid.angle-up::after {
             content: " \f106";
         }
     }
 
+    &.rotate-up {
+        icon {
+            transform: rotate(-180deg);
+        }
+    }
+
+    &.rotate-down {
+        .icon {
+            transform: rotate(0deg);
+        }
+    }
 
 }
