--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -19,6 +19,7 @@
 @import "views/BabaIndex";
 @import "views/ReviewIndex";
 @import "views/UserDetails";
+@import "views/GigDetails.scss";
 
 // Components
 @import "cmps/AppHeader";
