--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -14,6 +14,8 @@ $modal-btn-clr: #62646a;
 $modal-hover-clr2: #474748;
 $modal-hover-clr: #84868b;
 
+//Homepage colors
+$home-light-clr: #f1fdf7;
 
 
 $clr1: #2e3bce;
