--- a/src/assets/styles/cmps/DynamicModal.scss
+++ b/src/assets/styles/cmps/DynamicModal.scss
@@ -29,7 +29,7 @@
             padding-block-start: 0;
 
             .content-title {
-                color: $modal-content-clr;
+                color: $dark-clr1;
                 font-size: 16px;
                 font-weight: 700;
                 line-height: 24px;
