--- a/src/assets/styles/views/GigDetails.scss
+++ b/src/assets/styles/views/GigDetails.scss
@@ -59,5 +59,36 @@
         grid-column: 4;
         grid-row: 2;
     }
+    .next-btn{
+        border-radius: 50%;
+        width: 2em;
+        height: 2em;
+        font-size: 18px;
+        position: absolute;
+        top: 40%;
+        right: -10px;
+        background: #f8f8f8;
+        box-shadow: #000000 0px 2px 5px 0px;
+        color: #1dbf73;
+        line-height: 24px;
+    }
+    .prev-btn{
+        border-radius: 50%;
+        width: 2em;
+        height: 2em;
+        font-size: 18px;
+        position: absolute;
+        top: 40%;
+        left: -10px;
+        background: #f8f8f8;
+        box-shadow: #000000 0px 2px 5px 0px;
+        color: #1dbf73;
+        line-height: 24px;
+    }
+
+    .carousel {
+        /* position: relative; */
+        width: 100%;
+    }
     
 }
