--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -1,14 +1,3 @@
-// @font-face {
-//     font-family: Macan;
-//     src: url('../../fonts/Roboto-Medium.ttf') format('truetype');
-// }
-
-
-// @font-face {
-//     font-family: 'Macan-bold';
-//     src: url('../../fonts/Macan-Bold.otf') format('otf'),
-// }
-
 // FONT AWESOME
 @font-face {
     font-family: fa-brands;
@@ -35,4 +24,9 @@
 @font-face {
     font-family: Roboto;
     src: url(../../fonts/Roboto-Medium.ttf);
+}
+
+@font-face {
+    font-family: Domaine;
+    src: url(../../fonts/domaine.woff);
 }
