--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -13,6 +13,8 @@ $modal-underline-clr: #efeff0;
 $modal-btn-clr: #62646a;
 $modal-hover-clr2: #474748;
 $modal-hover-clr: #84868b;
+$modal-filter-txt-clr: #95979d;
+$modal-filter-border-clr: #dadbdd;
 
 //Homepage colors
 $home-light-clr: #f1fdf7;
