--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -18,6 +18,8 @@ $modal-filter-border-clr: #dadbdd;
 
 //Homepage colors
 $home-light-clr: #f1fdf7;
+$trusted-by-clr: #b5b6ba;
+$trusted-by-bg-clr: #f5f5f5;
 
 
 $clr1: #2e3bce;
