--- a/src/assets/styles/cmps/Modal.scss
+++ b/src/assets/styles/cmps/Modal.scss
@@ -7,6 +7,7 @@
     bottom: 0;
     position: fixed;
     background-color: rgba(0, 0, 0, .65);
+    z-index: 200;
 
     .modal-content {
         position: absolute;
