--- a/src/assets/styles/cmps/DynamicBtn.scss
+++ b/src/assets/styles/cmps/DynamicBtn.scss
@@ -10,6 +10,7 @@
     padding: 12px 16px;
     border: 1px solid $light-clr2;
     border-radius: 8px;
+    margin-block: 32px;
 
     &:not(:last-child) {
         margin-inline-end: 12px
