--- a/src/assets/styles/cmps/GigList.scss
+++ b/src/assets/styles/cmps/GigList.scss
@@ -1,6 +1,6 @@
 .gig-list{
     display: grid;
-    grid-template-columns: repeat(4, 282px);
+    grid-template-columns: repeat(4, rem(282px));
     grid-template-rows: 1fr; 
     gap: em(34px);
 
@@ -17,8 +17,8 @@
             border: 1px solid #e4e5e7;
             border-radius: 8px;
             height: 11em;
-            width: 292px;
-            margin-bottom: 7px;
+            width: rem(292px);
+            margin-bottom: rem(7px);
             cursor: pointer;
         }
     }
@@ -29,48 +29,48 @@
         flex-direction: column;
     
         .owner-details-1{
-            gap: 8px;
-            margin-bottom: -4px;
+            gap: rem(8px);
+            margin-bottom: rem(-4px);
         } 
         .owner-profile-img{
                 border-radius: 50%;
-                width: 24px;
+                width: rem(24px);
         }
         .owner-fullname{
-                font-size: 14px; 
+                font-size: rem(14px); 
                 font-weight:700;
-                line-height: 21px;
+                line-height: rem(21px);
         }
     }
   
     .owner-gig-title{
-        margin-top: 23px;
-        color: #404145;
+        margin-top: rem(23px);
+        color: $dark-clr;
         display: -webkit-box;
-        line-height: 20.8px;
-        margin-bottom: 8px;
+        line-height: rem(20.8px);
+        margin-bottom: rem(8px);
         font-weight: 400;
         min-height: 2em;
-        font-size: 16px;
+        font-size: 1rem ;
         &:hover{
             text-decoration: underline;
         }
     }
 
     .rating-price{
-        line-height: 13px;
-        gap: 3px;
+        line-height: rem(13px);
+        gap: rem(3px);
         align-items: center; 
     }
     
     .rate-wrapper{
-        gap: 3px
+        gap: rem(3px)
     }
 
     .gig-price {
         font-weight: 700;
-        line-height: 24px;
-        margin-top: 8px;
+        line-height: rem(24px);
+        margin-top: rem(8px);
     }
 
 }
