--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -10,7 +10,6 @@ $light-clr: #fff;
 
 //Modal Colors
 $modal-underline-clr: #efeff0;
-$modal-btn-clr: #62646a;
 $modal-hover-clr2: #474748;
 $modal-hover-clr: #84868b;
 $modal-filter-txt-clr: #95979d;
@@ -20,6 +19,9 @@ $modal-filter-border-clr: #dadbdd;
 $home-light-clr: #f1fdf7;
 $trusted-by-clr: #b5b6ba;
 $trusted-by-bg-clr: #f5f5f5;
+
+//User colors 
+$co-clr: #7a7d85;
 
 
 $clr1: #2e3bce;
