User details page has been filled and formatted with the user information

--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -66,6 +66,11 @@ a:visited {
     color: $dark-clr;
 }
 
+::selection {
+    background: $selections-clr;
+    color: $light-clr;
+}
+
 .owner-profile-img {
     @include owner-profile-img;
     
