--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -1,5 +1,6 @@
 // Colors
 $accent-clr: #1dbf73;
+$darkest-clr: #0e0e0f;
 $dark-clr1: #222325;
 $dark-clr: #404145;
 $dark-clr-1: #62646a;
@@ -22,15 +23,13 @@ $trusted-by-bg-clr: #f5f5f5;
 
 //User colors 
 $co-clr: #7a7d85;
+$btn-clr: #00698c;
+$selections-clr: #d5d4d2;
 
 
-$clr1: #2e3bce;
-$clr2: #6d08da;
-$clr3: #574f7d;
-$clr4: #f2a1e0;
-$clr5: #f26e93;
-$clr6: #fff;
-$clr7: #222;
+//list colors
+$list-title-clr: #555;
+$list-subtitle-clr: #b2b2b2;
 
 
 // Breakpoints
