--- a/src/assets/styles/cmps/CallToAction.scss
+++ b/src/assets/styles/cmps/CallToAction.scss
@@ -1,10 +1,14 @@
 .call-to-action {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
     grid-column: 2;
-    grid-row: 1;
+    grid-row: 2;
     justify-self: end;
     width: em(412px);
     border: 1px solid $dark-clr-2;
     padding: em(32px) em(24px);
+    margin-block-end: auto;
 
     .icon {
         width: em(16px);
